# fixagent-verifier

./: .gitignore  COMPOSE_QUICKSTART.md  DOCKER_COMPOSE_APPROACH.md  MULTI_PROJECT_MANAGEMENT.md  PLAN.md  QUICKSTART.md  README.md  TASK_MODE_PLAN.md  pyproject.toml
docs/: ARCHITECTURE_COMPARISON.md
src/fixagent_verifier/: __init__.py  compose_generator.py  project_detector.py
src/fixagent_verifier/cli/: __init__.py  compose_commands.py  main.py
src/fixagent_verifier/environments/: __init__.py  base.py  docker.py
src/fixagent_verifier/github/: __init__.py  client.py
src/fixagent_verifier/models/: __init__.py  pr.py  task.py  trial.py
src/fixagent_verifier/utils/: trial.py
src/fixagent_verifier/verifier/: __init__.py  base.py  gradle.py
tasks/springboot-aws-k8s_1/: README.md  docker-compose.yaml
templates/java-gradle/: Dockerfile  build.sh
